--- a/TTengineTest/TTengineTest/TTengineTest.csproj
+++ b/TTengineTest/TTengineTest/TTengineTest.csproj
@@ -83,6 +83,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tests\TestTextureSamplingShader.cs" />
     <Compile Include="Tests\TestBasicShader.cs" />
     <Compile Include="Tests\TestSphereCollision.cs" />
     <Compile Include="Tests\TestBTAI.cs" />
