--- a/TTengine/TTengine.csproj
+++ b/TTengine/TTengine.csproj
@@ -125,7 +125,7 @@
     <Compile Include="Comps\AudioComp.cs" />
     <Compile Include="Comps\BlinkComp.cs" />
     <Compile Include="Comps\BTAIComp.cs" />
-    <Compile Include="Comps\UserInputComp.cs" />
+    <Compile Include="Comps\PlayerInputComp.cs" />
     <Compile Include="Comps\ExpiresComp.cs" />
     <Compile Include="Comps\PositionComp.cs" />
     <Compile Include="Comps\RotateComp.cs" />
@@ -157,7 +157,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Systems\BTAISystem.cs" />
     <Compile Include="Systems\BlinkSystem.cs" />
-    <Compile Include="Systems\UserInputSystem.cs" />
+    <Compile Include="Systems\PlayerInputSystem.cs" />
     <Compile Include="Systems\TargetMotionSystem.cs" />
     <Compile Include="Systems\SphereCollisionSystem.cs" />
     <Compile Include="Systems\AudioSystem.cs" />
