--- a/TTengineTest/TTengineTest/TTengineTest.csproj
+++ b/TTengineTest/TTengineTest/TTengineTest.csproj
@@ -122,6 +122,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tests\TestMultiChannelsOnSameScreen.cs" />
     <Compile Include="Tests\TestPostEffects.cs" />
     <Compile Include="Tests\TestGamepad.cs" />
     <Compile Include="Tests\TestMixedShaders.cs" />
