--- a/TTengineTest/TTengineTest/TTengineTest.csproj
+++ b/TTengineTest/TTengineTest/TTengineTest.csproj
@@ -133,7 +133,7 @@
     <Compile Include="Tests\TestSpritePixelGetSet.cs" />
     <Compile Include="Tests\TestModifiers.cs" />
     <Compile Include="Tests\TestZoomedChannel.cs" />
-    <Compile Include="Tests\TestChannelSpritelets.cs" />
+    <Compile Include="Tests\TestMultiChannels.cs" />
     <Compile Include="Tests\Template.cs" />
     <Compile Include="Tests\TestTargetMotion.cs" />
     <Compile Include="Tests\TestScaling.cs" />
